# libmffcodec

./: CMakeLists.txt  README.md
include/: mffcodec.h
src/: deserializer.c  deserializer.h  ieee754.c  ieee754.h  serializer.c  serializer.h
test/: serializer_test.c  serializer_test.h  test.c
